# principles-of-low-level-programming

./: .clang-format  .gitignore  README.md  codestyle.txt  useful_funcs.c
hw01/: main.c  tests.c
hw02/: assignment.ad  main.c  minesweeper.c
hw02/tests/: cut.h  tests.c  utils_for_tests.c  utils_for_tests.h
hw03/: assignment.ad  capture.c  capture.h  demo.c  nft.c  pcap.h
hw03/tests/: tests-e2e.c  tests-unit.c
hw04/: assignment.ad  main.c  parser.c  parser.h  vector.c  vector.h  xparser.c  xparser.h  xpath.c  xpath.h
hw04/tests/: tests.c
hw05/: CMakeLists.txt  README.md  assignment.ad  main.c  sample_printer.c  sample_printer.h
hw05/data/: test-export.txt  test-import.txt
hw05/tests/: exitus.c  mainwrap.h  tests-nanecisto.c  utils.c  utils.h
hw05/tests.old/: tests.c
seminar-01/: assignment.adoc  printer.c
seminar-02/: assignment.adoc  drawer.c
seminar-03/: main.c
seminar-04/: assignment.adoc  matrix.c  tictac.c
seminar-05/: CMakeLists.txt  assignment.adoc  playground.c  string_library.c  string_library.h  unit_tests.c
seminar-06/: CMakeLists.txt  assert.h  assignment.adoc  cut.h  dynamic_lib.c  dynamic_lib.h  playground.c  unit_tests.c
seminar-07/: assignment.adoc  list.c  list.h  list_utils.c  list_utils.h  main.c
seminar-08/: aperture.txt  assignment.adoc  censor.c  cipher.c  filesort.c  getline.c  list_utils.c  list_utils.h  packets.c  playground.c
seminar-09/: CMakeLists.txt  assignment.adoc  playground.c  stack.c  stack.h  tree.c  tree.h
seminar-10/: CMakeLists.txt  assignment.adoc  queue.h  tests.c
seminar-11/: assignment.adoc  main.c
skuska/: CMakeLists.txt  calc.c  useful_funcs.c
